Implemented scdaemon socket file auto discovery.